# soroban-math

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: algorithms.md  approaches-to-mvp.md  benchmarks.md  design-decisions.md  observations.md  public-demand.md  range-values.md  references.md  terminolgies.md  truncation.md
example/: Cargo.toml  Makefile
example/src/: lib.rs  test.rs
example/test_snapshots/test/: test.1.json
notes/: logs.md  root-snipp.md  rules.md  snippets.md  snippets.rs  trig-snipp.md
src/: add.rs  casting.rs  core_arith.rs  error.rs  i32.rs  lib.rs  log.rs  pow.rs  root.rs  trig.rs  u32.rs
